--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <title>Quiz</title>
   </head>
-  <body class="bg-gray-300 overflow-hidden relative">
+  <body class="bg-gray-300 overflow-x-hidden relative">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
